Update doc links and build tasks